Make player cards change according to whose turn it is.

--- a/style.css
+++ b/style.css
@@ -56,9 +56,9 @@
 }
 
 #player1 {
-  background-color: red;
+  background-color: Orangered;
 }
 
 #player2 {
-  background-color: blue;
+  background-color: Mediumblue;
 }
