--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html * {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 #container {
   display: flex;
   flex-direction: column;
@@ -26,6 +30,8 @@
   border-radius: 25%;
   padding: 10px;
   background-color: white;
+  font-size: 40px;
+  font-weight: bold;
 }
 
 .boardTile:hover {
@@ -36,6 +42,7 @@
 .button {
   width: 3rem;
   height: 2rem;
+  border-radius: 25%;
 }
 
 #playerContainer {
@@ -49,10 +56,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 7rem;
+  width: 8rem;
   height: 4rem;
-  border: 0.2rem solid black;
-  border-radius: 25%;
+  border: 0.15rem solid black;
+  border-radius: 20%;
+  font-size: 25px;
+  font-weight: bold;
 }
 
 #player1 {
